# ReArk

./: CMakeLists.txt  README.md
resources/translations/: reark_zh_CN.ts
src/: CMakeLists.txt
src/controller/: AgentController.cpp  AgentController.h  AgentKnowledgeController.cpp  AgentKnowledgeController.h  AgentSettings.cpp  AgentSettings.h  DecompilerController.cpp  DecompilerController.h  LanguageController.cpp  LanguageController.h  SettingsController.cpp  SettingsController.h
src/core/: AppInitializer.cpp  AppInitializer.h  ApplicationController.cpp  ApplicationController.h  HyleDecompiler.cpp  HyleDecompiler.h  Translator.cpp  Translator.h  WindowChrome.cpp  WindowChrome.h
src/model/: AgentMessageModel.cpp  AgentMessageModel.h  SourceTreeModel.cpp  SourceTreeModel.h
src/presentation/: CodeEditorItem.cpp  CodeEditorItem.h  MarkdownRenderer.cpp  MarkdownRenderer.h  SyntaxThemeProvider.cpp
src/ui/qml/: main.qml
src/ui/qml/ReArk/: AboutWindow.qml  AppMenuBar.qml  CodeView.qml  CompactMenu.qml  CompactMenuSeparator.qml  FileTreeIcon.qml  HexView.qml  Icon.qml  ImageView.qml  InfoPanel.qml  MainWorkspace.qml  MarkdownCodeBlock.qml  MarkdownMessage.qml  MarkdownTableBlock.qml  MediaIconButton.qml  MediaView.qml  MenuBarButton.qml  PackageFileIcon.qml  QuickOpenDialog.qml  RoundIconButton.qml  SearchDialog.qml  SettingsPage.qml  SettingsWindow.qml  SmartAnalysisPage.qml  StartPage.qml  StatusBar.qml  TreeDisclosureIndicator.qml  UpdateWindow.qml  WindowResizeHandle.qml  WindowTitleBar.qml  WindowTitleButton.qml
